--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5156 2004/03/08 19:56:28 minskim Exp $
+$NetBSD: CHANGES,v 1.5157 2004/03/08 20:31:08 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1252,3 +1252,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome1-dirs to 1.5 [jmmv 2004-03-08]
 	Updated gnome2-dirs to 1.5 [jmmv 2004-03-08]
 	Updated tcl to 8.4.5 [minskim 2004-03-08]
+	Updated tk to 8.4.5 [minskim 2004-03-08]
