--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5157 2004/03/08 20:31:08 minskim Exp $
+$NetBSD: CHANGES,v 1.5158 2004/03/08 20:42:52 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1253,3 +1253,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome2-dirs to 1.5 [jmmv 2004-03-08]
 	Updated tcl to 8.4.5 [minskim 2004-03-08]
 	Updated tk to 8.4.5 [minskim 2004-03-08]
+	Updated automake to 1.8.3 [wiz 2004-03-08]
