--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5158 2004/03/08 20:42:52 wiz Exp $
+$NetBSD: CHANGES,v 1.5159 2004/03/08 21:05:04 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1254,3 +1254,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated tcl to 8.4.5 [minskim 2004-03-08]
 	Updated tk to 8.4.5 [minskim 2004-03-08]
 	Updated automake to 1.8.3 [wiz 2004-03-08]
+	Updated gnome to 2.4.2nb3 [jmmv 2004-03-08]
+	Updated gnome-extras to 2.4.2nb3 [jmmv 2004-03-08]
