--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5159 2004/03/08 21:05:04 jmmv Exp $
+$NetBSD: CHANGES,v 1.5160 2004/03/08 21:16:09 seb Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1256,3 +1256,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated automake to 1.8.3 [wiz 2004-03-08]
 	Updated gnome to 2.4.2nb3 [jmmv 2004-03-08]
 	Updated gnome-extras to 2.4.2nb3 [jmmv 2004-03-08]
+	Updated pspp to 0.3.0nb3 [seb 2004-03-08]
