Update Tcl/Tk to 8.4.6.
  * Tcl_Obj sharing fixed in [binary scan]
  * Updated errno usage for recent glibc
  * Fixed [file normalize ~unknownuser] error
  * Fixed two memory leaks in VFS code
  * Fixed possible infinite loop in TclFinalizeFilesystem
  * Updated HP-UX 11 build libraries setup
  * Unix std channels forced to exist at startup
  * Stopped broken [exec] quoting of '{'
  * Fixed memory leak with very long host names
  * Corrected level interpretation of Tcl_CreateTrace
  * Allow 64-bit configure on IRIX64-6.5*
  * Several OS X/Aqua native integration improvements (scrollbar,
    event generate, unicode clipboard, tk_messageBox, mousewheel event,
    alpha blending for partially transparent images)
  * Recognized native hand2/fleur cursors on Windows
  * Post menubuttons so they stay on screen better
  * Fixed crash during intra-image copy/resize
  * New msg catalogs for Esperanto and Polish
  * Corrections bold/italic font handling (width calculations) on Windows
  * Fixed shrinking grid geometry calculations

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5160 2004/03/08 21:16:09 seb Exp $
+$NetBSD: CHANGES,v 1.5161 2004/03/08 22:14:19 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1257,3 +1257,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome to 2.4.2nb3 [jmmv 2004-03-08]
 	Updated gnome-extras to 2.4.2nb3 [jmmv 2004-03-08]
 	Updated pspp to 0.3.0nb3 [seb 2004-03-08]
+	Updated tcl to 8.4.6 [minskim 2004-03-08]
+	Updated tk to 8.4.6 [minskim 2004-03-08]
