--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1481 2004/03/08 15:47:40 adam Exp $
+$NetBSD: TODO,v 1.1482 2004/03/08 22:14:19 minskim Exp $
 
 Suggested new packages
 ======================
@@ -325,7 +325,6 @@ Suggested package updates
 	o staroffice-7p1
 	o stella-1.3
 	o streamtuner-0.11.1
-	o tcl/tk-8.4.6
 	o tcl-expect-5.39.0
 	o tcpreplay-2.0.2
 	o tct-1.14
