--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5161 2004/03/08 22:14:19 minskim Exp $
+$NetBSD: CHANGES,v 1.5162 2004/03/08 22:16:21 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1259,3 +1259,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated pspp to 0.3.0nb3 [seb 2004-03-08]
 	Updated tcl to 8.4.6 [minskim 2004-03-08]
 	Updated tk to 8.4.6 [minskim 2004-03-08]
+	Updated amule to 1.2.6 [jmmv 2004-03-08]
