Note import of ppmd in doc/CHANGES and archivers/Makefile.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5164 2004/03/08 23:21:08 wiz Exp $
+$NetBSD: CHANGES,v 1.5165 2004/03/08 23:45:12 ben Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1262,3 +1262,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated amule to 1.2.6 [jmmv 2004-03-08]
 	Updated oss to 3.9.8d [wiz 2004-03-08]
 	Removed TreeText [wiz 2004-03-08]
+	Added ppmd-9.1 [ben 2004-03-08]
