--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1483 2004/03/08 22:18:02 wiz Exp $
+$NetBSD: TODO,v 1.1484 2004/03/09 01:01:32 minskim Exp $
 
 Suggested new packages
 ======================
@@ -251,6 +251,7 @@ Suggested package updates
 	o micq-0.4.10.5
 	o midnight-commander-4.6.0
 	o minicom-2.1
+	o mng-1.0.6
 	o mowitz-0.3.0
 	o moz-bin-plugger-1.5.1
 	o mrproject-0.9.1
