--- a/mk/install/install
+++ b/mk/install/install
@@ -1,7 +1,7 @@
 # -*- sh -*-
 # start of install
 #
-# $NetBSD: install,v 1.40 2005/07/29 18:32:18 jlam Exp $
+# $NetBSD: install,v 1.41 2005/08/19 22:24:10 jlam Exp $
 
 case ${STAGE} in
 PRE-INSTALL)
@@ -9,21 +9,18 @@ PRE-INSTALL)
 	# Require that necessary users and groups exist or else fail the
 	# installation of the package.
 	#
-	case ${_PKG_CREATE_USERGROUP} in
-	YES)	${TEST} ! -x ./+USERGROUP ||
-			./+USERGROUP ADD ${PKG_METADATA_DIR} ;;
-	esac
-	if ${TEST} ! -x ./+USERGROUP || \
-	   ./+USERGROUP CHECK-ADD ${PKG_METADATA_DIR}; then
-		:
-	else
-		exit 1
-	fi
+	${TEST} ! -x ./+USERGROUP ||
+		{ ./+USERGROUP ADD ${PKG_METADATA_DIR}
+		  if ./+USERGROUP CHECK-ADD ${PKG_METADATA_DIR}; then
+			:
+		  else
+			exit 1
+		  fi; }
 	#
 	# Create package directories at pre-install time.
 	#
 	if [ "${PKG_INSTALLATION_TYPE}" = "pkgviews" -a			\
-	     "${_PKG_CONFIG}" = "YES" -a -n "${CONF_DEPENDS}" ]; then
+	     "${_PKG_CONFIG}" = "yes" -a -n "${CONF_DEPENDS}" ]; then
 		pkg=`${PKG_ADMIN} -b -d ${DEPOTBASE} -s "" lsbest "${CONF_DEPENDS}"`
 		sysconfdir=`${PKG_INFO} -B -K ${DEPOTBASE} $pkg |	\
 			${AWK} '/^PKG_SYSCONFDIR=/ {			\
@@ -36,24 +33,18 @@ PRE-INSTALL)
 			${LN} -sf $sysconfdir ${PKG_SYSCONFDIR}
 		fi
 	fi
-	case ${_PKG_CONFIG} in
-	YES)	${TEST} ! -x ./+DIRS ||
-			./+DIRS ADD ${PKG_METADATA_DIR} ;;
-	esac
+	${TEST} ! -x ./+DIRS ||
+		./+DIRS ADD ${PKG_METADATA_DIR}
         ;;
 
 POST-INSTALL)
 	#
 	# Copy configuration/support files into place.
 	#
-	case ${_PKG_CONFIG} in
-        YES)	${TEST} ! -x ./+FILES ||
-			./+FILES ADD ${PKG_METADATA_DIR} ;;
-        esac
-	case ${_PKG_CONFIG}${_PKG_RCD_SCRIPTS} in
-	YESYES)	${TEST} ! -x ./+RCD_SCRIPTS ||
-			./+RCD_SCRIPTS ADD ${PKG_METADATA_DIR} ;;
-	esac
+        ${TEST} ! -x ./+FILES ||
+		./+FILES ADD ${PKG_METADATA_DIR}
+	${TEST} ! -x ./+RCD_SCRIPTS ||
+		./+RCD_SCRIPTS ADD ${PKG_METADATA_DIR}
 	#
 	# Set special permissions on any files/directories that need them.
 	#
@@ -74,17 +65,15 @@ VIEW-INSTALL)
 	#
 	# Register shells in /etc/shells.
 	#
-	case ${_PKG_REGISTER_SHELLS} in
-	YES)	${TEST} ! -x ./+SHELL ||
-			./+SHELL ADD ${PKG_METADATA_DIR} ;;
-	esac
+	${TEST} ! -x ./+SHELL ||
+		./+SHELL ADD ${PKG_METADATA_DIR}
 	${TEST} ! -x ./+SHELL ||
 		./+SHELL CHECK-ADD ${PKG_METADATA_DIR}
 
 	# If ${PKG_SYSCONFBASE} points outside of ${PREFIX}, then add the
 	# package config files to the proper view.
 	#
-	if [ "${_PKG_CONFIG}" = "YES" -a -n "${PKG_SYSCONFDEPOTBASE}" ]; then
+	if [ "${_PKG_CONFIG}" = "yes" -a -n "${PKG_SYSCONFDEPOTBASE}" ]; then
 		${SETENV} PLIST_IGNORE_FILES="${CONF_IGNORE_FILES}" \
 			${LINKFARM} -t ${PKG_SYSCONFVIEWBASE} -d ${PKG_SYSCONFDEPOTBASE} ${PKGNAME}
 	fi
