--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -665,3 +665,10 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated mail/nullmailer to 1.00 [schmonz 2005-08-20]
 	Updated audio/libvorbis to 1.1.0nb2 [grant 2005-08-20]
 	Updated www/awstats to 6.4nb1 [adrianp 2005-08-20]
+	Updated x11/asnap to 1.0nb1 [kristerw 2005-08-20]
+	Updated mail/elm-me to 2.4.93nb3 [kristerw 2005-08-20]
+	Updated net/wol to 0.7.1nb1 [kristerw 2005-08-20]
+	Updated math/xlife to 5.0nb3 [kristerw 2005-08-20]
+	Updated mail/mhonarc to 2.6.15nb1 [kristerw 2005-08-20]
+	Updated graphics/xplot to 0.90.7.1nb2 [kristerw 2005-08-20]
+	Updated devel/libbegemot to 1.9nb2 [kristerw 2005-08-20]
