--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6357 2007/05/22 12:20:08 tron Exp $
+$NetBSD: TODO,v 1.6358 2007/05/22 20:23:54 wiz Exp $
 
 Suggested new packages
 ======================
@@ -268,7 +268,7 @@ Suggested package updates
 	o adocman-0.13
 	o adtool-1.3
 	o aewm++-1.0.27
-	o afterstep-2.2.5
+	o afterstep-2.2.6
 	o album-4.01
 	o alee-ttf-11.2
 	o algae-4.3.6
@@ -420,7 +420,7 @@ Suggested package updates
 	o dnstracer-1.8
 	o doxygen-1.5.2
 	o dpkg-1.13.25
-	o drscheme-360
+	o drscheme-370
 	o dvd+rw-tools-7.0
 	o dvdrip-0.98.6
 	o dvdstyler-1.5beta5
@@ -502,6 +502,7 @@ Suggested package updates
 	o gdeskcal-1.01
 	o gdl-0.7.5
 	o gdsreader-0.3.2
+	o geany-0.11
 	o generator-cbiere-0.35r3
 	o gettext-0.16.1
 	o gfract-0.33
@@ -519,7 +520,7 @@ Suggested package updates
 	o glibmm-2.12.9
 	o glpk-4.16
 	o gmp3info-0.8.5a
-	o gmpc-0.14.0
+	o gmpc-0.15.0
 	o gnet1-1.1.9
 	o gnetman-20050429
 	o gnome-build-0.1.6
@@ -686,6 +687,7 @@ Suggested package updates
 	o libgii-1.0.2
 	o libgiigic-1.1.2
 	o libgnomedb-3.0.0
+	o libgnomekbd-2.18.2
 	o libgtop-2.14.9
 	o libgtop2-2.14.8
 	o libhydrogen-0.9.2
@@ -826,6 +828,7 @@ Suggested package updates
 	o openmortal-0.7.1
 	o openpam-20050616
 	o openssl-0.9.8e
+	o opera-9.21
 	o oregano-0.60.0
 	o oroborus-2.0.18
 	o osh-20070324
@@ -1067,6 +1070,7 @@ Suggested package updates
 	o py-paramiko-1.7
 	o py-pcgi-2.10.2
 	o py-pexpect-0.99999b
+	o py-prewikka-0.9.11
 	o py-proj-1.8.1a [at python.org]
 	o py-psyco-1.5.1
 	o py-pyrex-0.9.5.1a
@@ -1343,6 +1347,7 @@ Suggested package updates
 	o xtraceroute-0.9.1
 	o xtu-1.3
 	o xtux-20030306
+	o xv-20070520
 	o xvidcap-1.1.5
 	o xview-3.2.1.4.21.2
 	o xwpe-1.5.30a
