--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6358 2007/05/22 20:23:54 wiz Exp $
+$NetBSD: TODO,v 1.6359 2007/05/23 08:12:20 martti Exp $
 
 Suggested new packages
 ======================
@@ -776,8 +776,6 @@ Suggested package updates
 	o muse-0.9.2
 	o musicbrainz-3.0.0
 	o musicpd-0.12.2
-	o mysql4-client-4.1.22
-	o mysql4-server-4.1.22
 	o mzscheme-360 [pkg/36330]
 	o nagios-3.0a4
 	o nano-1.2.5 [pkg/32859|pkg/34511]
